Add preview app deploys (#964)
* Add Traefik

* Add devnet namespace

* Add config files

* Add more config files

* Add faucet bot

* Add faucet

* Always pull images

* Fix clickhouse healthcheck

* Add healthcheck

* Fix

* Add port bindings

* Add something to delete apps

* Faster copy

* Add frontend docker image

* Add frontend deployment builds

* Fix

* Fix

* Fix

* Add github token

* feat: use alpine node for building frontend image

* Fix

* Fix

* Fix

* Fix

* Fix

* Fix permission

* Fix open/highest/lowest candle prices (#954)

* Fix open/highest/lowest candle prices

* add test

* Fix test

* Add a test for small amounts

* fix

* Fix test

---------

Co-authored-by: larry <26318510+larry0x@users.noreply.github.com>

* Add healthchecks for deploys

* add dango-scripts crate (#958)

* add transfer ownership script

* delete the useless function

* fix(ui): testnet 2 (#961)

* chore: trigger mock data

* fix: quest banner

* fix: welcome message

* fix: unsubscribe when changing the interval

* fix: chart price

* fix(ui): link style welcome modal

* fix: quest banner checks

* fix(ui): body background

* fix: range with decimals

* fix(ui): filter pairs

* fix: applets naming in search menu

* chore: bumping store version

* fix(ui): input autocomplete color

* fix: quest banner volume condition

* chore: temp not saving chart info

* fix(ui): cq-dialogs position

* feat: invalidate order query after cancel

* fix: limit price and available to trade maxSignificantDigits

* feat: cancel all orders

* fix: return back maxSignificantDigits

* fix: pagination in account explorer

* fix: contract explorer previous page

* fix: switch action in dex

* chore: remaining pairs in quest banner

* feat: when tx submit always refresh balances

* fix: missing colons in global css

---------

Co-authored-by: kyar1s <iris.ledesma.27@gmail.com>

* Add username and sender logs

* dex: fix incorrect `best_price` that can cause panic in an edge case (#962)

* add a te

--- a/deploy/roles/clickhouse/tasks/main.yml
+++ b/deploy/roles/clickhouse/tasks/main.yml
@@ -53,6 +53,7 @@
     recreate: true
     env:
       CLICKHOUSE_SKIP_USER_SETUP: "1"
+    # Not sure I still need to bind outside
     ports:
       - "127.0.0.1:8123:8123" # HTTP interface
       - "127.0.0.1:9000:9000" # Native TCP interface
