--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -1,5 +1,9 @@
 name: Portal Deployment
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 on:
   workflow_dispatch:
   push:
@@ -8,12 +12,14 @@ on:
       - "ui/testnet"
       - "ui/release"
     paths:
+      - ".github/workflows/portal-deployment.yaml"
       - "sdk/**"
       - "ui/store/**"
       - "ui/portal/**"
       - "ui/applets/**"
   pull_request:
     paths:
+      - ".github/workflows/portal-deployment.yaml"
       - "sdk/**"
       - "ui/store/**"
       - "ui/portal/**"
