--- a/pyth/types/Cargo.toml
+++ b/pyth/types/Cargo.toml
@@ -10,10 +10,11 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-anyhow        = { workspace = true }
-byteorder     = { workspace = true }
-data-encoding = { workspace = true }
-grug          = { workspace = true }
-hex-literal   = { workspace = true }
-pyth-sdk      = { workspace = true }
-pythnet-sdk   = { workspace = true }
+anyhow              = { workspace = true }
+byteorder           = { workspace = true }
+data-encoding       = { workspace = true }
+grug                = { workspace = true }
+hex-literal         = { workspace = true }
+pyth-lazer-protocol = { workspace = true }
+pyth-sdk            = { workspace = true }
+pythnet-sdk         = { workspace = true }
