--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -13,9 +13,9 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@left-curve/dango": "workspace:*",
     "@left-curve/applets-kit": "workspace:*",
     "@left-curve/config": "workspace:*",
+    "@left-curve/dango": "workspace:*",
     "@left-curve/store": "workspace:*",
     "@tanstack/react-query": "catalog:",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -40,6 +40,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-shadow-2": "^7.1.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17"
