--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "machine-translate": "pnpm -F ui-config machine-translate",
     "dev:sdk": "turbo dev -F=./sdk/**",
     "dev:portal-web": "turbo dev -F=./sdk/** -F=./ui/store -F @left-curve/applets-kit -F @left-curve/portal-web",
+    "dev:portal-app": "pnpm build:kit && pnpm portal-app dev:ios",
     "build:sdk": "turbo build -F=./sdk/**",
     "build:graph": "turbo build --graph=build-graph.png",
     "build:portal-web": "turbo build -F @left-curve/portal-web",
     "build:kit": "turbo build -F @left-curve/applets-kit",
+    "build:portal-app": "pnpm portal-app build:ios",
     "storybook": "pnpm -F applets-kit sb:dev",
     "portal-web": "pnpm -F portal-web",
     "portal-app": "pnpm -F portal-app",
