--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -12,6 +12,7 @@
     "@inlang/paraglide-js": "2.0.0-beta.30",
     "@left-curve/applets-kit": "workspace:^",
     "@left-curve/chartiq": "^9.8.0",
+    "@left-curve/tradingview": "^29.4.0",
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
     "@left-curve/ui-config": "workspace:^",
