--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -16,6 +16,7 @@
     "@left-curve/config": "workspace:*",
     "@left-curve/dango": "workspace:*",
     "@left-curve/store": "workspace:*",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "catalog:",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.47",
@@ -23,6 +24,7 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
