--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -7,6 +7,7 @@
       "~/constants": ["./constants.config.ts"],
       "~/mock": ["./mockData.ts"],
       "~/store": ["./store.config.ts"],
+      "~/datafeed": ["./datafeed.config.ts"],
       "~/chartiq": ["./.chartiq.config.ts"]
     },
     "noEmit": true
