--- a/dango/indexer/clickhouse/Cargo.toml
+++ b/dango/indexer/clickhouse/Cargo.toml
@@ -4,7 +4,7 @@ categories    = { workspace = true }
 documentation = { workspace = true }
 edition       = { workspace = true }
 license       = { workspace = true }
-name          = "indexer-clickhouse"
+name          = "dango-indexer-clickhouse"
 repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
