--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -10,25 +10,25 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-anyhow                  = { workspace = true }
-dango-genesis           = { workspace = true }
-dango-httpd             = { workspace = true }
-dango-indexer-sql       = { workspace = true }
-dango-proposal-preparer = { workspace = true }
-dango-testing           = { workspace = true }
-grug-app                = { workspace = true }
-grug-db-memory          = { workspace = true }
-grug-httpd              = { workspace = true }
-grug-testing            = { workspace = true }
-grug-types              = { workspace = true }
-grug-vm-rust            = { workspace = true }
-hyperlane-testing       = { workspace = true }
-indexer-clickhouse      = { workspace = true, features = ["tracing"] }
-indexer-hooked          = { workspace = true }
-indexer-httpd           = { workspace = true, features = ["tracing"] }
-indexer-sql             = { workspace = true, features = ["tracing"] }
-tokio                   = { workspace = true }
-tracing                 = { workspace = true }
+anyhow                   = { workspace = true }
+dango-genesis            = { workspace = true }
+dango-httpd              = { workspace = true }
+dango-indexer-clickhouse = { workspace = true, features = ["tracing"] }
+dango-indexer-sql        = { workspace = true }
+dango-proposal-preparer  = { workspace = true }
+dango-testing            = { workspace = true }
+grug-app                 = { workspace = true }
+grug-db-memory           = { workspace = true }
+grug-httpd               = { workspace = true }
+grug-testing             = { workspace = true }
+grug-types               = { workspace = true }
+grug-vm-rust             = { workspace = true }
+hyperlane-testing        = { workspace = true }
+indexer-hooked           = { workspace = true }
+indexer-httpd            = { workspace = true, features = ["tracing"] }
+indexer-sql              = { workspace = true, features = ["tracing"] }
+tokio                    = { workspace = true }
+tracing                  = { workspace = true }
 
 [[bin]]
 name = "mock-httpd"
