--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -36,6 +36,7 @@
     "react-dom": "catalog:",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.3.0",
     "react-native-passkey": "^3.1.0",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~3.16.1",
