--- a/dango/scripts/Cargo.toml
+++ b/dango/scripts/Cargo.toml
@@ -9,12 +9,17 @@ repository    = { workspace = true }
 rust-version  = { workspace = true }
 version       = { workspace = true }
 
-[dependencies]
+[dev-dependencies]
 anyhow         = { workspace = true }
+chrono         = { workspace = true }
+clap           = { workspace = true }
 dango-client   = { workspace = true }
+dango-genesis  = { workspace = true }
+dango-testing  = { workspace = true }
 dango-types    = { workspace = true }
 grug           = { workspace = true }
 grug-app       = { workspace = true }
+grug-vm-rust   = { workspace = true }
 hex-literal    = { workspace = true }
 indexer-client = { workspace = true }
 num-format     = { workspace = true }
