feat(ui): mobile app theme (#1081)
* feat: expo packages

* fix: dark className

* feat: rn button

* feat: theme provider & hook

* feat: add layout

* feat: add globaltext

* feat: add icons

* feat: export components

* feat: test theme

* fix: build

* fix: replace radiusSizes

* fix: add unique id

* fix: package version

* fix: button shadows

* fix: button icon size

* fix: replace AsyncStorage, use mmkv instead

* fix: useTheme update

* fix: systemSchema typo

* fix: error setting theme

* fix: theme context

* fix: pick type util

--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -16,6 +16,7 @@
     "@left-curve/config": "workspace:*",
     "@left-curve/dango": "workspace:*",
     "@left-curve/store": "workspace:*",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "catalog:",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.47",
@@ -23,6 +24,7 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
@@ -34,6 +36,7 @@
     "react-dom": "catalog:",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.3.0",
     "react-native-passkey": "^3.1.0",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~3.16.1",
