add PythLazer client and include it in PythHandler and PP

--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -40,6 +40,7 @@ indexer-httpd           = { workspace = true, features = ["metrics"] }
 indexer-sql             = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 k256                    = { workspace = true }
 pyth-client             = { workspace = true }
+pyth-lazer              = { workspace = true }
 pyth-types              = { workspace = true }
 sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
