refactor: images in ui-config

--- a/ui/config/package.json
+++ b/ui/config/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "exports": {
     "./fonts/*": "./fonts/*",
+    "./images/*": "./images/*",
     "./tailwind/*": "./tailwind/*",
     "./messages/*": "./messages/*",
     "./inlang/*": "./project.inlang/*"
