--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -12,9 +12,9 @@
     "@inlang/paraglide-js": "2.0.0-beta.30",
     "@left-curve/applets-kit": "workspace:^",
     "@left-curve/chartiq": "^9.9.0",
-    "@left-curve/tradingview": "^29.4.0",
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
+    "@left-curve/tradingview": "^29.4.0",
     "@left-curve/ui-config": "workspace:^",
     "@monaco-editor/react": "^4.7.0",
     "@sentry/react": "^9.10.1",
@@ -28,6 +28,7 @@
     "big.js": "^7.0.1",
     "date-fns": "^4.1.0",
     "framer-motion": "catalog:",
+    "fs-extra": "^11.3.1",
     "fuzzysort": "^3.1.0",
     "graphql-ws": "^6.0.4",
     "react": "catalog:",
@@ -43,6 +44,7 @@
     "@rsbuild/plugin-react": "catalog:",
     "@tanstack/router-devtools": "catalog:",
     "@types/date-fns": "^2.6.3",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
