feat: mobile views refactor & search page

--- a/ui/portal/app/tsconfig.json
+++ b/ui/portal/app/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "~/*": ["./src/*"],
-      "~/store": ["./store.config.ts"]
+      "~/assets/*": ["./assets/*"],
+      "~/store": ["./store.config.ts"],
+      "~/*": ["./src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "nativewind-env.d.ts", "../../config/tailwind/config.ts"],
