--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-web-browser": "~14.0.2",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "catalog:",
     "react-dom": "catalog:",
@@ -39,11 +40,12 @@
     "react-native-mmkv": "^3.3.0",
     "react-native-passkey": "^3.1.0",
     "react-native-quick-crypto": "^0.7.17",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.8.0",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17"
