feat: foundation package

--- a/ui/applets/kit/package.json
+++ b/ui/applets/kit/package.json
@@ -54,7 +54,7 @@
     "@headlessui/react": "^2.1.10",
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
-    "@left-curve/ui-config": "workspace:^",
+    "@left-curve/foundation": "workspace:^",
     "@microlink/react-json-view": "^1.26.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
