--- a/ui/config/package.json
+++ b/ui/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@left-curve/ui-config",
+  "name": "@left-curve/foundation",
   "version": "0.1.0",
   "exports": {
     "./fonts/*": "./fonts/*",
@@ -10,12 +10,24 @@
   },
   "scripts":{
     "inlang": "inlang",
-    "machine-translate": "inlang machine translate --project ./project.inlang"
+    "machine-translate": "inlang machine translate --project ./project.inlang",
+    "ci": "pnpm lint",
+    "lint": "pnpm biome check --write ./src",
+    "lint:fix": "pnpm biome ci ./src",
+    "clean": "rm -rf ./build && rm -rf node_modules && rm -rf tsconfig.tsbuildinfo",
+    "clean:build": "rm -rf ./build",
+    "pre-dev": "tsc",
+    "dev": "tsc -w",
+    "build": "pnpm tsup --clean"
   },
   "dependencies": {
     "@inlang/cli": "^3.0.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "catalog:",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@left-curve/dango": "workspace:^"
+  },
+  "devDependencies": {
+    "@left-curve/config": "workspace:^"
   }
 }
