--- a/ui/portal/app/package.json
+++ b/ui/portal/app/package.json
@@ -12,7 +12,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@left-curve/applets-kit": "workspace:*",
+    "@left-curve/foundation": "workspace:*",
     "@left-curve/config": "workspace:*",
     "@left-curve/dango": "workspace:*",
     "@left-curve/store": "workspace:*",
