--- a/ui/portal/app/tsconfig.json
+++ b/ui/portal/app/tsconfig.json
@@ -12,7 +12,7 @@
   "exclude": ["node_modules"],
   "references": [
     {
-      "path": "../../applets/kit"
+      "path": "../../foundation"
     },
     {
       "path": "../../../sdk/dango"
