chore: update app scripts

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dev": "turbo dev",
     "machine-translate": "pnpm -F ui-config machine-translate",
     "dev:sdk": "turbo dev -F=./sdk/**",
-    "dev:portal-web": "turbo dev -F=./sdk/** -F=./ui/store -F @left-curve/applets-kit -F @left-curve/portal-web",
-    "dev:portal-app": "pnpm build:kit && pnpm portal-app dev:ios",
+    "dev:portal-web": "turbo dev -F=./sdk/** -F=./ui/store -F=./ui/foundation -F @left-curve/applets-kit -F @left-curve/portal-web",
+    "dev:portal-app": "turbo dev -F=./sdk/** -F=./ui/store -F=./ui/foundation -F @left-curve/portal-app",
     "build:sdk": "turbo build -F=./sdk/**",
     "build:graph": "turbo build --graph=build-graph.png",
     "build:portal-web": "turbo build -F @left-curve/portal-web",
