--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,6 +20,7 @@ catalog:
   "vite-tsconfig-paths": "^5.0.1"
   "vitest": "^2.0.5"
   "next": "14.2.5"
+  "@inlang/paraglide-js": "2.0.0-beta.30"
   # UI
   "react": "^18.3.1"
   "react-dom": "^18.3.1"
