--- a/ui/applets/convert/package.json
+++ b/ui/applets/convert/package.json
@@ -18,9 +18,10 @@
     "@left-curve/dango": "workspace:^",
     "@left-curve/foundation": "workspace:^",
     "@left-curve/store": "workspace:^",
-    "@rsbuild/plugin-svgr": "^1.2.2"
+    "use-sync-external-store": "^1.2.2"
   },
   "devDependencies": {
+    "@rsbuild/plugin-svgr": "^1.2.2",
     "@left-curve/config": "workspace:^",
     "@rsbuild/core": "catalog:",
     "@rsbuild/plugin-react": "catalog:",
@@ -30,14 +31,10 @@
     "postcss": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "storybook": "^8.6.12",
-    "storybook-react-rsbuild": "^1.0.1",
-    "tailwindcss": "catalog:"
+    "tailwindcss": "catalog:",
+    "@tanstack/react-query": "catalog:"
   },
   "peerDependencies": {
-    "@tanstack/react-query": ">=5.0.0",
-    "@tanstack/react-table": ">=8.0.0",
-    "date-fns": ">=4.0.0",
     "react": "^18",
     "react-dom": "^18"
   }
