--- a/ui/applets/kit/tsconfig.json
+++ b/ui/applets/kit/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "build",
     "rootDir": "src"
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts"],
   "exclude": ["node_modules"],
   "references": [
     {
