--- a/.github/workflows/storybook-deployment.yaml
+++ b/.github/workflows/storybook-deployment.yaml
@@ -37,7 +37,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Library dependencies
-        run: pnpm turbo "build" "-F=./ui/store/**"
+        run: pnpm build:kit
 
       - name: Build Storybook
         working-directory: "ui/applets/kit"
