--- a/pyth/lazer/Cargo.toml
+++ b/pyth/lazer/Cargo.toml
@@ -27,3 +27,8 @@ tokio-stream        = { workspace = true }
 tracing             = { workspace = true }
 tracing-subscriber  = { workspace = true }
 url                 = { workspace = true }
+
+[dev-dependencies]
+axum       = { workspace = true }
+rand       = { workspace = true }
+serde_json = { workspace = true }
